--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -20,10 +20,12 @@
         margin-top: 45%;
     }
     &--avatar {
+        position: absolute;
         z-index: 10;
         &-img {
-            margin-top: 10rem;
-            width: 100%;
+            margin-top: 10%;
+            margin-left: 5%;
+            width: 60%;
             height: auto;
             //box-shadow: 1rem 2rem 4rem rgba($color-main-5, .1);
 
